--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,2 +1,4 @@
-<h1>Welcome to Our Restaurant!</h1>
-<p>Explore our menu, make an order, and more.</p>
+<div class="home">
+  <h1>Welcome to Our Restaurant!</h1>
+  <p>Explore our menu, make an order, and more.</p>
+</div>
