--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,19 +1,7 @@
-@import "partials/variables";
-@import "partials/reset";
+@use "sass:map";
 
-body {
-  background-color: $white;
-  font-family: $primaryFont;
-  font-size: $baseFont;
-  color: $text;
-}
-
-// sass/partials/_variables.scss
-// $bg-color: #f0f0f0;
-
-// sass/partials/_mixins.scss
-// @mixin border-radius($radius) {
-//   -webkit-border-radius: $radius;
-//   -moz-border-radius: $radius;
-//   border-radius: $radius;
-// }
+@use "abstract";
+@use "base";
+@use "pages";
+@use "layout";
+// @use "components";
