--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,18 @@
 
   <!-- mobile menu buttons  -->
   <div class="mobile-menu">
+    <!-- <img
+      src="../assets/svg/hamburger.svg"
+      alt=""
+      class="hamburger"
+      id="mobile-menu__icon mobile-menu__icon--open"
+    />
+    <img
+      src="../assets/svg/close-btn.svg"
+      alt=""
+      class="mobile-menu__icon mobile-menu__icon--close"
+      id="closeMenu"
+    /> -->
     <svg
       xmlns="http://www.w3.org/2000/svg"
       fill="none"
